On branch main Your branch is up to date with 'origin/main'. Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <a href="clientes.html">Clientes</a>
         <a href="contacto.html">Contacto</a>
     </nav>
+
+    <div class="hero">
+        
+    </div>
    
     <section>
         <h2>Diseño y Desarrollo Web y Movil</h2>
