modified:   css/estilos.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dxsystems X</title>
     <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
     <header>
-        <h1>Dxsystems X</h1>
+        <h1 class="titulo">Dxsystems X</h1>
     </header>
 
     <nav>
